--- a/output/style.css
+++ b/output/style.css
@@ -593,6 +593,11 @@ video {
   margin-right: auto;
 }
 
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
 .ml-12 {
   margin-left: 3rem;
 }
@@ -1136,5 +1141,9 @@ video {
 
   .xl\:w-6\/12 {
     width: 50%;
+  }
+
+  .xl\:w-9\/12 {
+    width: 75%;
   }
 }
